--- a/src/Auth/Auth.csproj
+++ b/src/Auth/Auth.csproj
@@ -44,7 +44,7 @@
       <HintPath>..\..\libs\BlubLib.DotNetty.dll</HintPath>
     </Reference>
     <Reference Include="BlubLib.DotNetty.SimpleRmi">
-      <HintPath>..\..\..\..\..\Coding\C#\BlubLib\build\dotnet\release\BlubLib.DotNetty.SimpleRmi.dll</HintPath>
+      <HintPath>..\..\libs\BlubLib.DotNetty.SimpleRmi.dll</HintPath>
     </Reference>
     <Reference Include="Dapper, Version=1.50.2.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Dapper.1.50.2\lib\net451\Dapper.dll</HintPath>
