--- a/src/ProudNet/ProudNet.csproj
+++ b/src/ProudNet/ProudNet.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Codecs\MessageEncoder.cs" />
     <Compile Include="Codecs\ProudFrameEncoder.cs" />
     <Compile Include="Crypt.cs" />
+    <Compile Include="Handlers\SendContextEncoder.cs" />
     <Compile Include="HostIdFactory.cs" />
     <Compile Include="Codecs\ProudFrameDecoder.cs" />
     <Compile Include="Constants.cs" />
@@ -88,6 +89,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Configuration.cs" />
     <Compile Include="ProudSession.cs" />
+    <Compile Include="SendContext.cs" />
+    <Compile Include="SendOptions.cs" />
     <Compile Include="Serialization\MessageFactory.cs" />
     <Compile Include="Serialization\Messages\Core\C2S.cs" />
     <Compile Include="Serialization\Messages\Core\Factory.cs" />
