--- a/src/Game/Game.csproj
+++ b/src/Game/Game.csproj
@@ -39,11 +39,11 @@
     <Reference Include="BlubLib">
       <HintPath>..\..\libs\BlubLib.dll</HintPath>
     </Reference>
-    <Reference Include="BlubLib.Network">
-      <HintPath>..\..\libs\BlubLib.Network.dll</HintPath>
+    <Reference Include="BlubLib.DotNetty">
+      <HintPath>..\..\libs\BlubLib.DotNetty.dll</HintPath>
     </Reference>
-    <Reference Include="BlubLib.Network.SimpleRmi">
-      <HintPath>..\..\libs\BlubLib.Network.SimpleRmi.dll</HintPath>
+    <Reference Include="BlubLib.DotNetty.SimpleRmi">
+      <HintPath>..\..\libs\BlubLib.DotNetty.SimpleRmi.dll</HintPath>
     </Reference>
     <Reference Include="Dapper, Version=1.50.2.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Dapper.1.50.2\lib\net451\Dapper.dll</HintPath>
@@ -53,6 +53,15 @@
       <HintPath>..\..\packages\Dapper.FastCrud.2.4.0\lib\net46\Dapper.FastCrud.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="DotNetty.Buffers, Version=0.4.0.0, Culture=neutral, PublicKeyToken=bc13ca065fa06c29, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\DotNetty.Buffers.0.4.0\lib\net451\DotNetty.Buffers.dll</HintPath>
+    </Reference>
+    <Reference Include="DotNetty.Common, Version=0.4.0.0, Culture=neutral, PublicKeyToken=bc13ca065fa06c29, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\DotNetty.Common.0.4.0\lib\net451\DotNetty.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="DotNetty.Transport, Version=0.4.0.0, Culture=neutral, PublicKeyToken=bc13ca065fa06c29, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\DotNetty.Transport.0.4.0\lib\net451\DotNetty.Transport.dll</HintPath>
+    </Reference>
     <Reference Include="ExpressMapper, Version=1.8.1.0, Culture=neutral, PublicKeyToken=ac363faa09311ba0, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Expressmapper.1.8.1\lib\net46\ExpressMapper.dll</HintPath>
       <Private>True</Private>
@@ -60,6 +69,15 @@
     <Reference Include="Hjson, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Hjson.2.1.0\lib\net40\Hjson.dll</HintPath>
       <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Extensions.DependencyInjection.Abstractions, Version=1.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.Extensions.DependencyInjection.Abstractions.1.0.0\lib\netstandard1.0\Microsoft.Extensions.DependencyInjection.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Extensions.Logging, Version=1.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.Extensions.Logging.1.0.0\lib\netstandard1.1\Microsoft.Extensions.Logging.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Extensions.Logging.Abstractions, Version=1.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.Extensions.Logging.Abstractions.1.0.0\lib\netstandard1.1\Microsoft.Extensions.Logging.Abstractions.dll</HintPath>
     </Reference>
     <Reference Include="MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <HintPath>..\..\packages\MySql.Data.6.9.9\lib\net45\MySql.Data.dll</HintPath>
@@ -131,7 +149,7 @@
     <Compile Include="Network\ChatSession.cs" />
     <Compile Include="Network\GameServer.cs" />
     <Compile Include="Network\GameSession.cs" />
-    <Compile Include="Network\PacketFirewallRule.cs" />
+    <Compile Include="Network\FilteredMessageHandler.cs" />
     <Compile Include="Network\RelayServer.cs" />
     <Compile Include="Network\RelaySession.cs" />
     <Compile Include="Network\Services\AdminService.cs" />
