--- a/src/ProudNet/ProudNet.csproj
+++ b/src/ProudNet/ProudNet.csproj
@@ -80,7 +80,7 @@
     <Compile Include="Codecs\ProudFrameEncoder.cs" />
     <Compile Include="Codecs\UdpFrameDecoder.cs" />
     <Compile Include="Codecs\UdpFrameEncoder.cs" />
-    <Compile Include="Codecs\UdpHandler.cs" />
+    <Compile Include="Handlers\UdpHandler.cs" />
     <Compile Include="Codecs\UdpMessage.cs" />
     <Compile Include="Crypt.cs" />
     <Compile Include="ErrorEventArgs.cs" />
