Updated gamerule messages

--- a/src/Netsphere.Network/Netsphere.Network.csproj
+++ b/src/Netsphere.Network/Netsphere.Network.csproj
@@ -104,12 +104,21 @@
     <Compile Include="Data\Club\UnjoinSettingMemberDto.cs" />
     <Compile Include="Data\GameRule\ArcadeScoreSyncDto.cs" />
     <Compile Include="Data\GameRule\CaptainLifeDto.cs" />
+    <Compile Include="Data\GameRule\ChallengeRankerDto.cs" />
+    <Compile Include="Data\GameRule\ChallengeResultDto.cs" />
     <Compile Include="Data\GameRule\ChangeAvatarUnk1Dto.cs" />
     <Compile Include="Data\GameRule\ChangeAvatarUnk2Dto.cs" />
     <Compile Include="Data\GameRule\ChangeItemsUnkDto.cs" />
     <Compile Include="Data\GameRule\ChangeRuleDto.cs" />
+    <Compile Include="Data\GameRule\EquipCheckDto.cs" />
+    <Compile Include="Data\GameRule\ItemCheckDto.cs" />
+    <Compile Include="Data\GameRule\ItemDropAckDto.cs" />
+    <Compile Include="Data\GameRule\ItemDropDto.cs" />
+    <Compile Include="Data\GameRule\MixedTeamBriefingDto.cs" />
     <Compile Include="Data\GameRule\ScoreAssistDto.cs" />
     <Compile Include="Data\GameRule\ScoreDto.cs" />
+    <Compile Include="Data\GameRule\SeizeIntrudeInfoDto.cs" />
+    <Compile Include="Data\GameRule\SeizeUpdateInfoDto.cs" />
     <Compile Include="Data\Game\ArcadeMapInfoDto.cs" />
     <Compile Include="Data\Game\ArcadeRewardDto.cs" />
     <Compile Include="Data\Game\ArcadeStageInfoDto.cs" />
