--- a/src/ProudNet/ProudNet.csproj
+++ b/src/ProudNet/ProudNet.csproj
@@ -8,5 +8,6 @@
     <PackageReference Include="BlubLib.DotNetty" Version="0.1.4" />
     <PackageReference Include="BlubLib.Serialization" Version="0.1.4" />
     <PackageReference Include="Iconic.Zlib.Netstandard" Version="1.0.0" />
+    <PackageReference Include="Portable.BouncyCastle" Version="1.8.1.3" />
   </ItemGroup>
 </Project>
