--- a/src/Netsphere.Resource/Netsphere.Resource.csproj
+++ b/src/Netsphere.Resource/Netsphere.Resource.csproj
@@ -20,5 +20,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="BlubLib" Version="0.1.4" />
+    <PackageReference Include="Portable.BouncyCastle" Version="1.8.1.3" />
   </ItemGroup>
 </Project>
