--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,7 @@ indent_size = 4
 end_of_line = lf
 trim_trailing_whitespace = true
 
-[.gitlab-ci.yml]
+[appveyor.yml]
 end_of_line = lf
 indent_size = 2
 trim_trailing_whitespace = true
