dotnet publish for CI binaries

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,21 +7,21 @@ build_script:
 - cmd: >-
     dotnet restore
 
-    dotnet build -c DebugNoTools
+    dotnet publish -c DebugNoTools
 
-    dotnet build -c ReleaseNoTools
+    dotnet publish -c ReleaseNoTools
 
     msbuild /p:Configuration=DebugOnlyTools
 
     msbuild /p:Configuration=ReleaseOnlyTools
 
-    xcopy /S src\Auth\bin\Debug\netcoreapp2.0\* build_debug\auth\
+    xcopy /S src\Auth\bin\Debug\netcoreapp2.0\publish\* build_debug\auth\
 
-    xcopy /S src\Game\bin\Debug\netcoreapp2.0\* build_debug\game\
+    xcopy /S src\Game\bin\Debug\netcoreapp2.0\publish\* build_debug\game\
 
-    xcopy /S src\Auth\bin\Release\netcoreapp2.0\* build_release\auth\
+    xcopy /S src\Auth\bin\Release\netcoreapp2.0\publish\* build_release\auth\
 
-    xcopy /S src\Game\bin\Release\netcoreapp2.0\* build_release\game\
+    xcopy /S src\Game\bin\Release\netcoreapp2.0\publish\* build_release\game\
 
     xcopy /S src\tools\DataExtractor\bin\Debug\net461\*.exe build_debug\tools\extractor\
 
