Removed SlimMath and fixed p2p messages
Closes #11

--- a/src/Netsphere.Network/Netsphere.Network.csproj
+++ b/src/Netsphere.Network/Netsphere.Network.csproj
@@ -6,7 +6,7 @@
   <ItemGroup>
     <PackageReference Include="BlubLib" Version="0.1.4" />
     <PackageReference Include="BlubLib.Serialization" Version="0.1.4" />
-    <Reference Include="..\..\libs\SlimMath.dll" />
+    <PackageReference Include="System.Numerics.Vectors" Version="4.4.0" />
     <Reference Include="..\..\libs\SharpLzo.dll" />
   </ItemGroup>
   <ItemGroup>
