Fixed process exitting before exit is finished

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,15 +1,16 @@
 root = true
 
 [*]
-insert_final_newline = true
 indent_style = space
-indent_size = 4
 
-[*.{cs}]
+[*.cs] 
 end_of_line = lf
+indent_size = 4 
+insert_final_newline = true 
 trim_trailing_whitespace = true
 
-[appveyor.yml]
+[*.{yml,csproj,xml,json,hjson}] 
 end_of_line = lf
 indent_size = 2
+insert_final_newline = true 
 trim_trailing_whitespace = true
