--- a/src/Game/Game.csproj
+++ b/src/Game/Game.csproj
@@ -1,27 +1,30 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-    <PropertyGroup>
-        <OutputType>Exe</OutputType>
-        <TargetFramework>netcoreapp2.0</TargetFramework>
-        <GenerateAssemblyInfo>True</GenerateAssemblyInfo>
-        <RootNamespace>Netsphere</RootNamespace>
-        <RuntimeIdentifiers>win-x86;win-x64;linux-x64</RuntimeIdentifiers>
-    </PropertyGroup>
-    <ItemGroup>
-        <PackageReference Include="Expressmapper" Version="1.9.1" />
-        <PackageReference Include="Hjson" Version="3.0.0" />
-        <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
-        <PackageReference Include="MySql.Data" Version="8.0.8-dmr" />
-        <PackageReference Include="Serilog" Version="2.5.0" />
-        <PackageReference Include="Serilog.Sinks.Console" Version="3.0.1" />
-        <PackageReference Include="Serilog.Sinks.File" Version="3.2.0" />
-        <PackageReference Include="Stateless" Version="3.1.0" />
-        <Reference Include="..\..\libs\SharpLzo.dll" />
-    </ItemGroup>
-    <ItemGroup>
-        <ProjectReference Include="..\Auth.ServiceModel\Auth.ServiceModel.csproj" />
-        <ProjectReference Include="..\Netsphere\Netsphere.csproj" />
-        <ProjectReference Include="..\Netsphere.Database\Netsphere.Database.csproj" />
-        <ProjectReference Include="..\Netsphere.Network\Netsphere.Network.csproj" />
-        <ProjectReference Include="..\ProudNet\ProudNet.csproj" />
-    </ItemGroup>
+  <PropertyGroup>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <GenerateAssemblyInfo>True</GenerateAssemblyInfo>
+    <RootNamespace>Netsphere</RootNamespace>
+    <RuntimeIdentifiers>win-x86;win-x64;linux-x64</RuntimeIdentifiers>
+    <CodeAnalysisRuleSet>..\..\Rules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Expressmapper" Version="1.9.1" />
+    <PackageReference Include="Hjson" Version="3.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="RefactoringEssentials" Version="5.4.0" />
+    <PackageReference Include="Roslynator.Analyzers" Version="1.5.0" />
+    <PackageReference Include="Serilog" Version="2.5.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.0.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="3.2.0" />
+    <PackageReference Include="Stateless" Version="3.1.0" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />
+    <Reference Include="..\..\libs\SharpLzo.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Auth.ServiceModel\Auth.ServiceModel.csproj" />
+    <ProjectReference Include="..\Netsphere\Netsphere.csproj" />
+    <ProjectReference Include="..\Netsphere.Database\Netsphere.Database.csproj" />
+    <ProjectReference Include="..\Netsphere.Network\Netsphere.Network.csproj" />
+    <ProjectReference Include="..\ProudNet\ProudNet.csproj" />
+  </ItemGroup>
 </Project>
