--- a/src/Auth.ServiceModel/Auth.ServiceModel.csproj
+++ b/src/Auth.ServiceModel/Auth.ServiceModel.csproj
@@ -7,9 +7,9 @@
   <ItemGroup>
     <PackageReference Include="BlubLib.DotNetty.SimpleRmi" Version="0.1.4" />
     <PackageReference Include="BlubLib.Serialization" Version="0.1.4" />
-    <PackageReference Include="RefactoringEssentials" Version="5.4.0" />
-    <PackageReference Include="Roslynator.Analyzers" Version="1.5.0" />
-    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />
+    <PackageReference Include="RefactoringEssentials" Version="5.4.0" PrivateAssets="All" />
+    <PackageReference Include="Roslynator.Analyzers" Version="1.5.0" PrivateAssets="All" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" PrivateAssets="All" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ProudNet\ProudNet.csproj" />
