--- a/src/tools/DataExtractor/DataExtractor.csproj
+++ b/src/tools/DataExtractor/DataExtractor.csproj
@@ -10,9 +10,9 @@
   <ItemGroup>
     <PackageReference Include="Costura.Fody" Version="1.6.2" />
     <PackageReference Include="Fody" Version="2.1.2" />
-    <PackageReference Include="RefactoringEssentials" Version="5.4.0" />
-    <PackageReference Include="Roslynator.Analyzers" Version="1.5.0" />
-    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />
+    <PackageReference Include="RefactoringEssentials" Version="5.4.0" PrivateAssets="All" />
+    <PackageReference Include="Roslynator.Analyzers" Version="1.5.0" PrivateAssets="All" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" PrivateAssets="All" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Netsphere.Resource\Netsphere.Resource.csproj" />
