--- a/src/tools/DatabaseMigrator/DatabaseMigrator.csproj
+++ b/src/tools/DatabaseMigrator/DatabaseMigrator.csproj
@@ -10,9 +10,9 @@
     <PackageReference Include="EntryPoint" Version="1.2.2" />
     <PackageReference Include="Fody" Version="2.1.2" />
     <PackageReference Include="MySql.Data" Version="8.0.9-dmr" />
-    <PackageReference Include="RefactoringEssentials" Version="5.4.0" />
-    <PackageReference Include="Roslynator.Analyzers" Version="1.5.0" />
-    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />
+    <PackageReference Include="RefactoringEssentials" Version="5.4.0" PrivateAssets="All" />
+    <PackageReference Include="Roslynator.Analyzers" Version="1.5.0" PrivateAssets="All" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" PrivateAssets="All" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.4.0" />
   </ItemGroup>
   <ItemGroup>
