--- a/src/tools/NetsphereExplorer/NetsphereExplorer.csproj
+++ b/src/tools/NetsphereExplorer/NetsphereExplorer.csproj
@@ -14,10 +14,10 @@
     <PackageReference Include="reactiveui" Version="6.5.0" />
     <PackageReference Include="reactiveui-events-winforms" Version="6.5.0.3" />
     <PackageReference Include="reactiveui-winforms" Version="6.5.0" />
-    <PackageReference Include="RefactoringEssentials" Version="5.4.0" />
-    <PackageReference Include="Roslynator.Analyzers" Version="1.5.0" />
+    <PackageReference Include="RefactoringEssentials" Version="5.4.0" PrivateAssets="All" />
+    <PackageReference Include="Roslynator.Analyzers" Version="1.5.0" PrivateAssets="All" />
     <PackageReference Include="Splat" Version="1.6.2" />
-    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" PrivateAssets="All" />
     <Reference Include="..\..\..\libs\WindowsAPICodePack.dll" />
     <Reference Include="System.Windows.Forms" />
     <ProjectReference Include="..\..\Netsphere.Resource\Netsphere.Resource.csproj" />
