--- a/src/tools/DataExtractor/DataExtractor.csproj
+++ b/src/tools/DataExtractor/DataExtractor.csproj
@@ -5,14 +5,10 @@
     <GenerateAssemblyInfo>True</GenerateAssemblyInfo>
     <RootNamespace>Netsphere</RootNamespace>
     <PostBuildEvent>del "$(TargetDir)liblzo.so" "$(TargetDir)miniLzo_x86.dll" "$(TargetDir)miniLzo_x64.dll"</PostBuildEvent>
-    <CodeAnalysisRuleSet>..\..\..\Rules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Costura.Fody" Version="1.6.2" />
     <PackageReference Include="Fody" Version="2.1.2" />
-    <PackageReference Include="RefactoringEssentials" Version="5.4.0" PrivateAssets="All" />
-    <PackageReference Include="Roslynator.Analyzers" Version="1.5.0" PrivateAssets="All" />
-    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" PrivateAssets="All" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Netsphere.Resource\Netsphere.Resource.csproj" />
@@ -31,4 +27,5 @@
   <Target Name="CleanReferenceCopyLocalPaths" AfterTargets="AfterBuild;NonWinFodyTarget">
     <Delete Files="@(ReferenceCopyLocalPaths->'$(OutDir)%(DestinationSubDirectory)%(Filename)%(Extension)')" />
   </Target>
+  <Import Project="..\..\..\Rules.targets" />
 </Project>
