--- a/src/Auth.ServiceModel/Auth.ServiceModel.csproj
+++ b/src/Auth.ServiceModel/Auth.ServiceModel.csproj
@@ -2,16 +2,13 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GenerateAssemblyInfo>True</GenerateAssemblyInfo>
-    <CodeAnalysisRuleSet>..\..\Rules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="BlubLib.DotNetty.SimpleRmi" Version="0.1.4" />
     <PackageReference Include="BlubLib.Serialization" Version="0.1.4" />
-    <PackageReference Include="RefactoringEssentials" Version="5.4.0" PrivateAssets="All" />
-    <PackageReference Include="Roslynator.Analyzers" Version="1.5.0" PrivateAssets="All" />
-    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" PrivateAssets="All" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ProudNet\ProudNet.csproj" />
   </ItemGroup>
+  <Import Project="..\..\Rules.targets" />
 </Project>
