--- a/src/Netsphere.Network/Netsphere.Network.csproj
+++ b/src/Netsphere.Network/Netsphere.Network.csproj
@@ -2,14 +2,10 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GenerateAssemblyInfo>True</GenerateAssemblyInfo>
-    <CodeAnalysisRuleSet>..\..\Rules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="BlubLib" Version="0.1.4" />
     <PackageReference Include="BlubLib.Serialization" Version="0.1.4" />
-    <PackageReference Include="RefactoringEssentials" Version="5.4.0" PrivateAssets="All" />
-    <PackageReference Include="Roslynator.Analyzers" Version="1.5.0" PrivateAssets="All" />
-    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" PrivateAssets="All" />
     <PackageReference Include="System.Numerics.Vectors" Version="4.4.0" />
     <Reference Include="..\..\libs\SharpLzo.dll" />
   </ItemGroup>
@@ -28,4 +24,5 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <Import Project="..\..\Rules.targets" />
 </Project>
