--- a/src/tools/NetsphereExplorer/NetsphereExplorer.csproj
+++ b/src/tools/NetsphereExplorer/NetsphereExplorer.csproj
@@ -5,7 +5,6 @@
     <GenerateAssemblyInfo>True</GenerateAssemblyInfo>
     <EnableDefaultEmbeddedResourceItems>false</EnableDefaultEmbeddedResourceItems>
     <PostBuildEvent>del "$(TargetDir)liblzo.so" "$(TargetDir)miniLzo_x86.dll" "$(TargetDir)miniLzo_x64.dll"</PostBuildEvent>
-    <CodeAnalysisRuleSet>..\..\..\Rules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="BlubLib.GUI" Version="0.1.4" />
@@ -14,10 +13,7 @@
     <PackageReference Include="reactiveui" Version="6.5.0" />
     <PackageReference Include="reactiveui-events-winforms" Version="6.5.0.3" />
     <PackageReference Include="reactiveui-winforms" Version="6.5.0" />
-    <PackageReference Include="RefactoringEssentials" Version="5.4.0" PrivateAssets="All" />
-    <PackageReference Include="Roslynator.Analyzers" Version="1.5.0" PrivateAssets="All" />
     <PackageReference Include="Splat" Version="1.6.2" />
-    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" PrivateAssets="All" />
     <Reference Include="..\..\..\libs\WindowsAPICodePack.dll" />
     <Reference Include="System.Windows.Forms" />
     <ProjectReference Include="..\..\Netsphere.Resource\Netsphere.Resource.csproj" />
@@ -48,4 +44,5 @@
   <Target Name="CleanReferenceCopyLocalPaths" AfterTargets="AfterBuild;NonWinFodyTarget">
     <Delete Files="@(ReferenceCopyLocalPaths->'$(OutDir)%(DestinationSubDirectory)%(Filename)%(Extension)')" />
   </Target>
+  <Import Project="..\..\..\Rules.targets" />
 </Project>
