--- a/src/Game/Game.csproj
+++ b/src/Game/Game.csproj
@@ -13,8 +13,8 @@
     <PackageReference Include="Serilog" Version="2.5.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.0.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="3.2.0" />
+    <PackageReference Include="SharpLzo" Version="0.1.2" />
     <PackageReference Include="Stateless" Version="3.1.0" />
-    <Reference Include="..\..\libs\SharpLzo.dll" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Auth.ServiceModel\Auth.ServiceModel.csproj" />
