--- a/src/tools/DataExtractor/DataExtractor.csproj
+++ b/src/tools/DataExtractor/DataExtractor.csproj
@@ -4,7 +4,6 @@
     <TargetFramework>net461</TargetFramework>
     <GenerateAssemblyInfo>True</GenerateAssemblyInfo>
     <RootNamespace>Netsphere</RootNamespace>
-    <PostBuildEvent>del "$(TargetDir)liblzo.so" "$(TargetDir)miniLzo_x86.dll" "$(TargetDir)miniLzo_x64.dll"</PostBuildEvent>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Costura.Fody" Version="1.6.2" />
@@ -13,19 +12,6 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Netsphere.Resource\Netsphere.Resource.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="..\..\..\libs\miniLzo_x64.dll">
-      <Link>costura64\miniLzo_x64.dll</Link>
-    </EmbeddedResource>
-    <EmbeddedResource Include="..\..\..\libs\miniLzo_x86.dll">
-      <Link>costura32\miniLzo_x86.dll</Link>
-    </EmbeddedResource>
-    <Content Include="FodyWeavers.xml">
-      <SubType>Designer</SubType>
-    </Content>
-  </ItemGroup>
-  <Target Name="CleanReferenceCopyLocalPaths" AfterTargets="AfterBuild;NonWinFodyTarget">
-    <Delete Files="@(ReferenceCopyLocalPaths->'$(OutDir)%(DestinationSubDirectory)%(Filename)%(Extension)')" />
-  </Target>
+  <Import Project="..\SharpLzo.targets" />
   <Import Project="..\..\..\Rules.targets" />
 </Project>
