--- a/src/Netsphere.Resource/Netsphere.Resource.csproj
+++ b/src/Netsphere.Resource/Netsphere.Resource.csproj
@@ -1,26 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <GenerateAssemblyInfo>True</GenerateAssemblyInfo>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="BlubLib" Version="0.1.20" />
     <PackageReference Include="Portable.BouncyCastle" Version="1.8.1.3" />
+    <PackageReference Include="SharpLzo" Version="0.1.2" />
     <PackageReference Include="System.Numerics.Vectors" Version="4.4.0" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="..\..\libs\SharpLzo.dll" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="..\..\libs\miniLzo_x64.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\..\libs\miniLzo_x86.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="..\..\libs\liblzo.so">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <Import Project="..\..\Rules.targets" />
 </Project>
