--- a/src/tools/DataExtractor/DataExtractor.csproj
+++ b/src/tools/DataExtractor/DataExtractor.csproj
@@ -1,13 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net461</TargetFramework>
-    <GenerateAssemblyInfo>True</GenerateAssemblyInfo>
+    <TargetFramework>NET471</TargetFramework>
     <RootNamespace>Netsphere</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Costura.Fody" Version="1.6.2" />
-    <PackageReference Include="Fody" Version="2.1.2" />
+    <PackageReference Include="Costura.Fody" Version="3.1.0" />
+    <PackageReference Include="Fody" Version="3.1.4" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Netsphere.Resource\Netsphere.Resource.csproj" />
