--- a/src/tools/DatabaseMigrator/DatabaseMigrator.csproj
+++ b/src/tools/DatabaseMigrator/DatabaseMigrator.csproj
@@ -1,13 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net461</TargetFramework>
-    <GenerateAssemblyInfo>True</GenerateAssemblyInfo>
+    <TargetFramework>NET471</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Costura.Fody" Version="1.6.2" />
+    <PackageReference Include="Costura.Fody" Version="3.1.0" />
     <PackageReference Include="EntryPoint" Version="1.2.2" />
-    <PackageReference Include="Fody" Version="2.1.2" />
+    <PackageReference Include="Fody" Version="3.1.4" />
     <PackageReference Include="MySql.Data" Version="8.0.9-dmr" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.4.0" />
   </ItemGroup>
