Actual working serverlist implementation

--- a/src/Netsphere.Common/Netsphere.Common.csproj
+++ b/src/Netsphere.Common/Netsphere.Common.csproj
@@ -15,5 +15,11 @@
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.0.0" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Caching" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Netsphere\Netsphere.csproj" />
+  </ItemGroup>
   <Import Project="..\..\Rules.targets" />
 </Project>
