--- a/src/Netsphere.Server.Auth/Netsphere.Server.Auth.csproj
+++ b/src/Netsphere.Server.Auth/Netsphere.Server.Auth.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Foundatio" Version="7.0.1738" />
+    <PackageReference Include="Foundatio.JsonNet" Version="7.0.1738" />
     <PackageReference Include="Foundatio.Redis" Version="7.0.1584" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="2.1.1" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.2" />
