Add player parameter to CreateScore

--- a/src/plugins/WebApi/WebApi.csproj
+++ b/src/plugins/WebApi/WebApi.csproj
@@ -10,5 +10,5 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  <Import Project="..\PluginBase.targets" />
+  <Import Project="..\GamePluginBase.targets" />
 </Project>
