--- a/src/plugins/ExamplePlugin/ExamplePlugin.csproj
+++ b/src/plugins/ExamplePlugin/ExamplePlugin.csproj
@@ -2,5 +2,5 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
-  <Import Project="..\PluginBase.targets" />
+  <Import Project="..\GamePluginBase.targets" />
 </Project>
