--- a/src/plugins/GamePluginBase.targets
+++ b/src/plugins/GamePluginBase.targets
@@ -11,6 +11,7 @@
     <PackageReference Include="Stateless" Version="4.2.1" Private="False" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="$(MSBuildThisFileDirectory)\..\Logging\Logging.csproj" Private="False" />
     <ProjectReference Include="$(MSBuildThisFileDirectory)\..\Netsphere.Common\Netsphere.Common.csproj" Private="False" />
     <ProjectReference Include="$(MSBuildThisFileDirectory)\..\Netsphere.Database\Netsphere.Database.csproj" Private="False" />
     <ProjectReference Include="$(MSBuildThisFileDirectory)\..\Netsphere.Resource\Netsphere.Resource.csproj" Private="False" />
