--- a/.build/_build.csproj
+++ b/.build/_build.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -10,7 +10,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nuke.Common" Version="0.11.0" />
+    <PackageReference Include="Nuke.Common" Version="0.15.0" />
+    <PackageReference Include="Nuke.Docker" Version="0.2.2" />
   </ItemGroup>
 
   <ItemGroup>
