--- a/src/ProudNet/ProudNet.csproj
+++ b/src/ProudNet/ProudNet.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <NoWarn>1998</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="BlubLib" Version="0.1.21" />
