Add search for ItemsView

--- a/src/tools/Netsphere.Tools.ShopEditor/Netsphere.Tools.ShopEditor.csproj
+++ b/src/tools/Netsphere.Tools.ShopEditor/Netsphere.Tools.ShopEditor.csproj
@@ -6,6 +6,7 @@
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <EnableDefaultEmbeddedResourceItems>false</EnableDefaultEmbeddedResourceItems>
     <LangVersion>7.1</LangVersion>
+    <NoWarn>1998</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Netsphere.Database\Netsphere.Database.csproj" />
